modules/concepts/client/css/panel.css
.inline-block {
    display: inline-block;
}

.sidepanel {
    position: absolute;
    top: 0;
    left: 0;
    background: #f6f6f6;
    height: 100%;
    border-right: 1px solid #f0f0f0;
}
.sidepanel.maximized {
    padding: 0;
}
.sidepanel.minimized {
    padding: 0;
}

.sidepanel header.row {
    background: #aba6c0;
}

.sidepanel.maximized header {
    margin: 0;
    padding: 7px 15px 2px 15px;
}
.sidepanel.minimized header {
    width: 100%;
    padding-right: 3px;
    padding-top: 32px;
    height: 102px;
}
.sidepanel header ol {
    padding-left: 0;
    margin: 10pt 0 0 0;
}
.sidepanel header ol li {
    display: inline;
}
.sidepanel header ol li:after {
    content: " » ";
    color: #e7e5f8;
}
.sidepanel header ol li a {
    color: #f8f7fb;
}
.sidepanel header h2 {
    margin-top: 0;
    color: #f8f7fb;
}
@media screen and (max-width: 1300px) {
    .sidepanel header h2 {
        font-size: 16pt;
    }
    .breadcrumbs {
        font-size: 12px;
    }
    .sidepanel.maximized header {
        padding-left: 5px;
    }
}
.panel-header-content {
    margin-top: -10px;
}
@media screen and (min-width: 1301px) {
    .sidepanel header h2 {
        font-size: 24pt;
    }
    .breadcrumbs {
        font-size: 14px;
    }
}

.sidepanel .row {
    /*margin: 0 -15pt;*/
    background: #f7f7f7;
}


#zoomToggleContainer hr {
    /*background: #0f0;
    border-top: 1px solid #ccc;
*/
}


@media (min-width: 768px) {
    .sidepanel .nav-tabs.nav-justified > li {
        background-color: #eae5e5;
    }
    .sidepanel .nav-tabs.nav-justified > li > a {
        background-color: #eae5e5;
        color: #888888;
    }
    .sidepanel .nav-tabs.nav-justified > .active > a {
        background-color: #f6f6f6;
        border-bottom: 1px solid #f6f6f6;
        color: #555;
    }
}



.lectureList {
    padding-left: 0;
}


a, a:focus {
    outline: 0;
}

.maximized .panel-header-buttons {
    margin-top: -5px;
}

.maximized .panel-button {
    font-size: 11pt;
    width: 49%;
    float: left;
    height: 26pt;
    margin: 0pt 1% 5pt 0pt;
    /*box-shadow: 2px 2px 4px #999;*/
    border-radius: 5pt;
    border: 1px solid #ddd;
    background: #8b87a2;
    display: block;
    color: #edecf1;
    top: 5px;
    padding: 0px 2px 0 0px;
    text-align: center;
    /*position:absolute;*/
}

.maximized .panel-button:last-child {
    margin-right: 0;
}

.maximized a.panel-button:hover {
    text-decoration: none;
    background:#b8b5d7;
    color: #333;
}
/*.maximized .panel-button.play {
    right: 10px;
}
.maximized .panel-button.goal {
    right: 70px;
}*/
.minimized .panel-button {
    font-size: 0;
    width: 20pt;
    height: 20pt;
    margin: 4pt 0 0 3pt;
    /*padding: 2pt 0 0 3pt;*/
    /*box-shadow: 2px 2px 4px #999;*/
    border-radius: 5pt;
    border: 1px solid #ddd;
    background: #f6f6f6;
    display: block;
    color: #333333;
    float: none !important;
}
.minimized .panel-button.play span {
    font-size: 10pt;
}
.minimized .play.learnmode-true {
    padding: 2pt 0 0 3pt;
}
.minimized .play.learnmode-false {
    padding: 2pt 0 0 5pt;
}
.maximized .play.learnmode-true .map-icon {
    top: 5px;
}
.maximized .play.learnmode-true {
    padding-top: 7px;
}
.maximized .play.learnmode-false {
    padding-top: 7px;
}

.concept-panel .admin-action {
    display: none;
}
.concept-panel .admin-panel .admin-action {
    display: inherit;
}

.course-list {
    /*left: -10px;*/
    padding-left: 0;
    list-style-type: none;
    position: relative;
}
.course-list *, .course-list .concept {
    border-color: inherit;
}

.course-list > .concept > a > .concept-line {
    top: 0px;
    min-height: 0;
}

.course-list > .concept > a {
    padding-bottom: 15px;
}

.concept-list {
    position: relative;
    list-style-type: none;
    top: 12px;
    padding-left: 11px;
    padding-top: 8px;
    left: 14px;
}

.concept-list > .concept {
    /*height: 29pt;*/
    margin-bottom: 15px;
}


.concept-panel p {
    margin-top: 10pt;
}

.panel-tab {
    vertical-align: bottom;
}

a[disabled] {
    pointer-events: none;
    /*color: #666;*/
}
a[disabled] .map-icon {
    -webkit-filter: grayscale(100%);
}

.concept-list > li {
    position: relative;
    display: inline-block;
    width: 100%;
}
.concept-list > li > a > span.glyphicon {
    z-index: 3;
    position: absolute;

}
.concept-list .flag {
    margin: 10pt;
    position: absolute;
    left: -4pt;
    top: -6pt;
}


.concept-tick, .concept-seen {
    left: 6pt;
    top: 4pt;
    position: absolute;
    z-index: 3;
}

.maximized .concept-list-nested .concept-list-nested .glyphicon {
    font-size: 70%;
}

.concept-list-nested .concept-list-nested .concept-tick, .concept-list-nested .concept-list-nested .concept-seen {
    top: 6px;
    left: 9px;
}
.concept-list-nested .concept-list-nested .flag {
    top: -6px;
    left: -3px;
}

.concept.notOnPlan > a > .concept-circle {
    background: #aaa !important;
}

.concept > a {
    position: relative;
    top: 0;
    /*left: 30pt;*/
    padding-top: 3px;
    /*padding-left: 30pt;*/
    z-index: 2;
    text-decoration: none;
}


.concept-circle {
    width: 20pt;
    height: 20pt;
    display: block;
    border-radius: 10pt;
    /* border: 1px solid #999; */
    z-index: 2;
    position: absolute;
    top: 0;
    box-shadow: 1px 1px 3px #aaa;
}

.active > a > .concept-circle, .concept-list .concept:hover > a > .concept-circle, .hover > a > .concept-circle, .concept-list .concept:hover > a > .concept-circle  {

    border: 2px solid #444466;
}

.flag {
    display: none;
}
.goal > a > .flag {
    display: block;
    z-index:3;
}
/*
.learnmode-no .concept-list .concept > a:hover > .flag {
    display: block;
}*/


.concept-line {
    /*background: #4C4B86;*/

    width: 2px;
    z-index: 0 !important;
    /*min-height: 37px;*/
    position: absolute;
    display: block;
    left: 14px;
    top: -7px;
    height: 100%;

}
/* ... */

